--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -972,6 +972,430 @@
     font-size: 11px; } }
 
 /*========/adaptive==========*/
+@media (max-width: 992px) {
+  .page .header {
+    -webkit-box-shadow: 0px 20px 50px rgba(55, 32, 14, 0.1);
+    box-shadow: 0px 20px 50px rgba(55, 32, 14, 0.1); } }
+
+/*========Breadcrumbs=======*/
+.breadcrumbs {
+  margin: 24px 0 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .breadcrumbs__item {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    margin-right: 48px;
+    position: relative;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear; }
+    .breadcrumbs__item:last-child {
+      margin-right: 0; }
+      .breadcrumbs__item:last-child:after {
+        display: none; }
+    .breadcrumbs__item:after {
+      content: "";
+      width: 1px;
+      height: 18px;
+      background-color: #2B323C;
+      opacity: 0.2;
+      -webkit-transform: rotate(-25.77deg) translateY(-50%);
+      -ms-transform: rotate(-25.77deg) translateY(-50%);
+      transform: rotate(-25.77deg) translateY(-50%);
+      position: absolute;
+      top: 50%;
+      right: -23.5px;
+      z-index: 1; }
+    .breadcrumbs__item svg {
+      width: 16px;
+      height: 16px;
+      fill: #BF9D77;
+      margin-right: 20px;
+      -webkit-transition: all .2s linear;
+      -o-transition: all .2s linear;
+      transition: all .2s linear; }
+    .breadcrumbs__item span {
+      font-family: "Roboto", sans-serif;
+      font-size: 12px;
+      font-weight: 400;
+      color: #2B323C;
+      line-height: 1.5;
+      -webkit-transition: all .2s linear;
+      -o-transition: all .2s linear;
+      transition: all .2s linear; }
+    .breadcrumbs__item:hover span {
+      color: #BF9D77; }
+    .breadcrumbs__item.active span {
+      color: #2B323C;
+      opacity: 0.3; }
+
+/*========/breadcrumbs=======*/
+/*=========About======*/
+.about {
+  padding-bottom: 100px; }
+  .about .slider-arrows {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 10; }
+  .about .slick-dots {
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: absolute;
+    bottom: 42px;
+    left: 30px;
+    z-index: 10; }
+    .about .slick-dots button {
+      font-size: 0;
+      color: transparent;
+      width: 35px;
+      height: 1px;
+      background-color: #fff; }
+    .about .slick-dots li {
+      margin-right: 10px; }
+      .about .slick-dots li:last-child {
+        margin-right: 0; }
+      .about .slick-dots li.slick-active button {
+        background-color: #BF9D77; }
+  .about__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .about__info {
+    width: 50%;
+    padding-right: 50px; }
+  .about__photo {
+    width: 50%;
+    position: relative; }
+  .about__slider {
+    height: 100%; }
+  .about .slick-list, .about .slick-track {
+    height: 100%; }
+  .about__item {
+    position: relative;
+    min-height: 320px;
+    height: 100%;
+    cursor: pointer; }
+    .about__item img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+      -o-object-fit: cover;
+      object-fit: cover; }
+
+/*===/about===*/
+/*===Popup-about===*/
+.popup-about {
+  display: none;
+  background-color: #2B323C;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  width: 100%;
+  height: 100vh; }
+  .popup-about__inner, .popup-about__slider, .popup-about__slide, .popup-about__item {
+    height: 100%; }
+  .popup-about img {
+    width: 100%;
+    height: 100vh;
+    -o-object-fit: cover;
+    object-fit: cover; }
+  .popup-about__close {
+    width: 48px;
+    height: 48px;
+    background-color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1; }
+    .popup-about__close svg {
+      width: 12px;
+      height: 12px;
+      fill: #203864; }
+  .popup-about__buttons {
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+    z-index: 1; }
+  .popup-about__btn {
+    width: 48px;
+    height: 48px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    background-color: #BF9D77;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear; }
+    .popup-about__btn svg {
+      width: 16px;
+      height: 16px;
+      fill: #fff; }
+    .popup-about__btn-minus {
+      background-color: #fff; }
+      .popup-about__btn-minus svg {
+        fill: #2B323C;
+        width: 12px;
+        height: 2px; }
+    .popup-about__btn:hover {
+      opacity: 0.8; }
+  .popup-about .slider-arrows {
+    right: 50px;
+    bottom: 50px; }
+  .popup-about .slick-dots {
+    left: auto;
+    right: 311px;
+    bottom: 92px; }
+    .popup-about .slick-dots button {
+      width: 55px; }
+    .popup-about .slick-dots li {
+      margin-right: 20px; }
+
+.main-border {
+  margin: auto;
+  overflow: hidden;
+  position: relative; }
+
+.main-border img {
+  height: auto;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0; }
+
+/*===/popup-about===*/
+/*=========/about======*/
+/*======List-product=======*/
+.list-product__inner {
+  margin-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: -20px; }
+  .list-product__inner > * {
+    width: calc(50% - 20px);
+    margin-left: 20px; }
+
+.list-product__more {
+  display: none;
+  margin-top: 30px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #BF9D77;
+  -webkit-transition: all .2s linear;
+  -o-transition: all .2s linear;
+  transition: all .2s linear; }
+  .list-product__more:hover {
+    color: #983031; }
+
+/*======list-product=======*/
+/*========List-numbers======*/
+.list-numbers li {
+  margin-bottom: 10px; }
+  .list-numbers li:last-child {
+    margin-bottom: 0; }
+
+.list-numbers__item {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex; }
+  .list-numbers__item > span {
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    color: #2B323C;
+    line-height: 1.5;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear; }
+    .list-numbers__item > span:first-child {
+      color: #983031;
+      margin-right: 10px;
+      min-width: 20px;
+      display: block; }
+
+.list-numbers a.list-numbers__item:hover span {
+  color: #983031; }
+
+/*========/list-numbers======*/
+/*=========List-sublist====*/
+.list-sublist {
+  padding-left: 30px;
+  margin-top: 10px; }
+  .list-sublist li {
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #2B323C;
+    line-height: 1.5;
+    margin-bottom: 10px; }
+    .list-sublist li:last-child {
+      margin-bottom: 0; }
+    .list-sublist li a {
+      color: #2B323C;
+      -webkit-transition: all .2s linear;
+      -o-transition: all .2s linear;
+      transition: all .2s linear; }
+      .list-sublist li a:hover {
+        color: #983031; }
+
+/*=========/list-sublist====*/
+/*======Sertificats======*/
+.sertificats {
+  padding: 90px 0 100px; }
+  .sertificats__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .sertificats__info {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 400px;
+    flex: 0 0 400px;
+    padding: 2px 30px 2px 0;
+    margin: -2px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    background-color: #fff;
+    position: relative;
+    z-index: 20; }
+    .sertificats__info:before {
+      content: "";
+      width: 1000%;
+      height: 100%;
+      background-color: #fff;
+      position: absolute;
+      top: 0;
+      left: 2px;
+      z-index: 1;
+      -webkit-transform: translateX(-100%);
+      -ms-transform: translateX(-100%);
+      transform: translateX(-100%); }
+  .sertificats .slider-arrows {
+    margin-top: 80px; }
+  .sertificats .slick-list {
+    overflow: visible; }
+  .sertificats__slider {
+    width: calc(100% - 250px);
+    margin-right: -150px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .sertificats .slick-slide {
+    margin-right: 30px; }
+  .sertificats__item img {
+    width: 100%;
+    height: 100%; }
+
+/*======/sertificats======*/
+/*========Adaptive======*/
+@media (max-width: 1200px) {
+  .sertificats {
+    padding: 70px  0 80px; }
+    .sertificats .slick-slide {
+      margin-right: 12px; } }
+
+@media (max-width: 860px) {
+  .about {
+    padding-bottom: 80px; }
+    .about__inner {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; }
+    .about__info {
+      width: 100%;
+      padding-right: 0; }
+    .about__photo {
+      width: 100%;
+      margin-top: 50px; }
+    .about__item {
+      max-height: 320px;
+      min-height: auto; }
+      .about__item img {
+        position: static;
+        max-height: 320px; }
+  .sertificats__slider {
+    width: 100%;
+    margin-right: -400px;
+    padding-right: 120px; } }
+
+@media (max-width: 765px) {
+  .about__photo {
+    margin-top: 30px; }
+  .about .slick-dots {
+    bottom: 30px; }
+    .about .slick-dots button {
+      width: 25px; }
+  .list-product__inner {
+    display: block;
+    margin-left: 0; }
+    .list-product__inner > * {
+      width: 100%;
+      margin-left: 0; }
+  .list-product__col_more {
+    display: none; }
+  .list-product__more {
+    display: block; }
+  .sertificats__inner {
+    display: block;
+    position: relative;
+    padding-bottom: 90px; }
+  .sertificats__info {
+    width: 100%;
+    padding: 0;
+    position: static; }
+  .sertificats__slider {
+    width: 100%;
+    padding-right: 30%;
+    margin: 30px 0 0 0; }
+  .sertificats .slider-arrows {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 1; } }
+
+/*========/adaptive======*/
 /*Reset
 ===============*/
 * {
@@ -1104,6 +1528,10 @@ body.hidden {
   font-weight: 400;
   color: #2B323C;
   line-height: 1.5; }
+  .description p {
+    margin-bottom: 20px; }
+    .description p:last-child {
+      margin-bottom: 0; }
 
 .btn {
   display: -webkit-inline-box;
@@ -1450,12 +1878,19 @@ body.hidden {
   margin-top: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
-  margin-right: -30px; }
+  display: flex; }
 
 .service__slide {
   width: calc(33.33333% - 30px);
+  height: 100%; }
+
+.service .slick-list {
+  margin-right: -30px; }
+
+.service .slick-slide {
   margin-right: 30px; }
+  .service .slick-slide > div {
+    height: 100%; }
 
 .service__row {
   display: -webkit-box;
@@ -1716,12 +2151,11 @@ body.hidden {
     margin-right: -100px; }
   .product .slick-list {
     margin-left: -12px; }
-  .product__slide {
+  .product .slick-slide {
     margin-left: 12px; }
-  .service__slider {
+  .service .slick-list {
     margin-right: -12px; }
-  .service__slide {
-    width: calc(33.33333% - 12px);
+  .service .slick-slide {
     margin-right: 12px; }
   .info-box__info {
     padding: 20px; }
