--- a/assets/css/pages.scss
+++ b/assets/css/pages.scss
@@ -70,7 +70,7 @@
 	padding-bottom: 100px;
 	.slider-arrows {
 		position: absolute;
-		bottom: 0;
+		bottom: 0px;
 		right: 0;
 		z-index: 10;
 	}
@@ -114,6 +114,14 @@
 	&__slider {
 		height: 100%;
 	}
+	&__slide {
+		height: 100%;
+	}
+	.slick-slide {
+		>div {
+			height: 100%;
+		}
+	}
 	.slick-list, .slick-track,  {
 		height: 100%;
 	}
@@ -138,7 +146,7 @@
 .popup-about {
 	display: none;
 	background-color: $bl;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	z-index: 1000;
@@ -217,19 +225,23 @@
 		}
 	}
 }
-
+.popup-about__slide {
+	display: block!important;
+}
 .main-border {
     margin: auto;
+    height:100%;
+	width: 100%;
     overflow: hidden;
     position: relative;
     }
-    .main-border img{
-        height:  auto;
-        width: 100%;
-        position: absolute;
-        left: 0;
-        top: 0;
-    }
+.main-border img{
+    height:  auto;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
 /*===/popup-about===*/
 /*=========/about======*/
 
@@ -242,19 +254,6 @@
 		>* {
 			width: calc(50% - 20px);
 			margin-left: 20px;
-		}
-	}
-	&__more {
-		display: none;
-		margin-top: 30px;
-		font-family: $ff;
-		font-size: 16px;
-		font-weight: 400;
-		line-height: 1.5;
-		color: $lbrown;
-		transition: all .2s linear;
-		&:hover {
-			color: $red;
 		}
 	}
 }
@@ -320,6 +319,51 @@
 }
 /*=========/list-sublist====*/
 
+/*======List-dots=====*/
+.list-dots {
+	li {
+		position: relative;
+		padding-left: 30px;
+		margin-bottom: 10px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+		&:before {
+			content: "";
+			width: 10px;
+			height: 10px;
+			border-radius: 50%;
+			border: 2px solid $red;
+			position: absolute;
+			top: 6px;
+			left: 5px;
+			z-index: 1;
+		}
+	}
+	&__strong {
+		font-weight: 700;
+	}
+}
+/*======/list-dots=====*/
+
+/*=======Text-more======*/
+.text-more {
+	&__btn {
+		display: none;
+		margin-top: 30px;
+		font-family: $ff;
+		font-size: 16px;
+		font-weight: 400;
+		line-height: 1.5;
+		color: $lbrown;
+		transition: all .2s linear;
+		&:hover {
+			color: $red;
+		}
+	}
+}
+/*=======/text-more======*/
+
 /*======Sertificats======*/
 .sertificats {
 	padding: 90px 0 100px;
@@ -363,6 +407,7 @@
 		margin-right: 30px;
 	}
 	&__item {
+		cursor: zoom-in;
 		img {
 			width: 100%;
 			height: 100%;
@@ -371,6 +416,75 @@
 }
 /*======/sertificats======*/
 
+/*====Advantages====*/
+.advantages {
+	&__inner {
+		margin-top: 50px;
+	}
+	&__text {
+		font-family: $ff;
+		font-size: 16px;
+		font-weight: 400;
+		color: $bl;
+		line-height: 1.5;
+		p, ul {
+			margin-bottom: 20px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+	.text-more {
+		p {
+			margin-bottom: 20px;
+		}
+	}
+	.text-more__btn {
+		margin-top: 0;
+		color: $red;
+		border-bottom: 1px dashed rgba(152, 48, 49, .3);
+		&:hover {
+			border-bottom: 1px dashed rgba(152, 48, 49, 0);
+		}
+	}
+}
+/*====/advantages====*/
+
+/*======Reviews=====*/
+.reviews {
+	padding: 80px  0 170px;
+	&__header {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		align-items: flex-end;
+	}
+	.slider-arrows {
+		margin-top: 10px;
+	}
+	&__slider {
+		margin-top: 45px;
+		display: flex;
+	}
+	&__photo {
+		box-shadow: 0px 0px 0px 6px rgba(229, 229, 229, 0.5);
+		margin-bottom: 20px;
+		cursor: zoom-in;
+
+		img {
+			width: 100%;
+		}
+	}
+	&__autor {
+		font-family: $ff;
+		font-size: 16px;
+		font-weight: 400;
+		line-height: 1.5;
+		color: $bl;
+	}
+}
+/*======/reviews=====*/
+
 
 /*========Adaptive======*/
 @media(max-width: 1200px) {
@@ -378,6 +492,23 @@
 		padding: 70px  0 80px;
 		.slick-slide {
 			margin-right: 12px;
+		}
+	}
+	.about {
+		.slider-arrows {
+			bottom: 3px;
+		}
+	}
+	.popup-about {
+		.slider-arrows {
+			bottom: 50px;
+		}
+	}
+}
+@media(max-width: 1024px) {
+	.main-border {
+		img {
+			min-height: 100vh;
 		}
 	}
 }
@@ -411,8 +542,19 @@
 			padding-right: 120px;
 		}
 	}
+	.advantages {
+		&__inner {
+			margin-top: 30px;
+		}
+	}
 }
 @media(max-width: 765px) {
+	.text-more {
+		display: none;
+		&__btn {
+			display: inline-block;
+		}
+	}
 	.about {
 		&__photo {
 			margin-top: 30px;
@@ -433,14 +575,6 @@
 				margin-left: 0;
 			}
 		}
-		&__col {
-			&_more {
-				display: none;
-			}
-		}
-		&__more {
-			display: block;
-		}
 	}
 	.sertificats {
 		&__inner {
@@ -452,17 +586,46 @@
 			width: 100%;
 			padding: 0;
 			position: static;
+			&:before {
+				display: none;
+			}
 		}
 		&__slider {
 			width: 100%;
 			padding-right: 30%;
 			margin: 30px 0 0 0;
+			position: relative;
+			&:before {
+				content: "";
+				width: 10px;
+				height: 100%;
+				background-color: $wh;
+				position: absolute;
+				top: 0;
+				left: -20px;
+				z-index: 1;
+			}
 		}
 		.slider-arrows {
 			position: absolute;
 			left: 0;
 			bottom: 0;
 			z-index: 1;
+		}
+	}
+	.popup-about {
+		&__buttons {
+			bottom: auto;
+			top: 20px;
+			left: 20px;
+		}
+		.slider-arrows {
+			right: 20px;
+			bottom: 20px;
+		}
+		.slick-dots {
+			left: 20px;
+			bottom: 50px;
 		}
 	}
 }
