--- a/assets/css/page.scss
+++ b/assets/css/page.scss
@@ -421,10 +421,6 @@
 	overflow: auto;
 	&__inner {
 		background-color: $wh;
-		/*height: 100%;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;*/
 	}
 	&__close {
 		position: absolute;
@@ -471,7 +467,7 @@
 	}
 	&__contact {
 		background-color: $gray;
-		padding: 40px;
+		padding: 40px 40px 80px;
 		.header-contact__item {
 			margin-bottom: 10px;
 			&:last-child {
@@ -783,10 +779,6 @@
 		&.active {
 			transform: translateX(0);
 		}
-		/*&.footer {
-			top: auto;
-			bottom: 0;
-		}*/
 	}
 	.nav {
 		&__link {
