--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -470,11 +470,7 @@
   transition: all .3s linear;
   overflow: auto; }
   .mobile-menu__inner {
-    background-color: #fff;
-    /*height: 100%;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;*/ }
+    background-color: #fff; }
   .mobile-menu__close {
     position: absolute;
     top: 18px;
@@ -513,7 +509,7 @@
         border-bottom: none; }
   .mobile-menu__contact {
     background-color: #F9F9F9;
-    padding: 40px; }
+    padding: 40px 40px 80px; }
     .mobile-menu__contact .header-contact__item {
       margin-bottom: 10px; }
       .mobile-menu__contact .header-contact__item:last-child {
@@ -805,11 +801,7 @@
 /*========Adaptive==========*/
 @media (max-width: 1200px) {
   .mobile-menu {
-    display: block;
-    /*&.footer {
-			top: auto;
-			bottom: 0;
-		}*/ }
+    display: block; }
     .mobile-menu.active {
       -webkit-transform: translateX(0);
       -ms-transform: translateX(0);
@@ -994,16 +986,16 @@
     -webkit-box-align: start;
     -ms-flex-align: start;
     align-items: flex-start;
-    margin-right: 48px;
+    margin-left: 48px;
     position: relative;
     -webkit-transition: all .2s linear;
     -o-transition: all .2s linear;
     transition: all .2s linear; }
-    .breadcrumbs__item:last-child {
-      margin-right: 0; }
-      .breadcrumbs__item:last-child:after {
+    .breadcrumbs__item:first-child {
+      margin-left: 0; }
+      .breadcrumbs__item:first-child:before {
         display: none; }
-    .breadcrumbs__item:after {
+    .breadcrumbs__item:before {
       content: "";
       width: 1px;
       height: 18px;
@@ -1014,7 +1006,7 @@
       transform: rotate(-25.77deg) translateY(-50%);
       position: absolute;
       top: 50%;
-      right: -23.5px;
+      left: -23.5px;
       z-index: 1; }
     .breadcrumbs__item svg {
       width: 16px;
@@ -1024,6 +1016,8 @@
       -webkit-transition: all .2s linear;
       -o-transition: all .2s linear;
       transition: all .2s linear; }
+      .breadcrumbs__item svg:nth-child(2) {
+        display: none; }
     .breadcrumbs__item span {
       font-family: "Roboto", sans-serif;
       font-size: 12px;
@@ -1318,7 +1312,7 @@
     -webkit-box-flex: 0;
     -ms-flex: 0 0 400px;
     flex: 0 0 400px;
-    padding: 2px 30px 2px 0;
+    padding: 2px 30px 0 2px;
     margin: -2px 0;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1635,6 +1629,8 @@
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
     padding-right: 0; }
+  .testimonial .title {
+    font-size: 28px; }
   .testimonial__inner {
     display: block;
     position: relative;
@@ -1653,7 +1649,16 @@
 
 @media (max-width: 376px) {
   .reviews .slick-list {
-    padding-right: 50%; } }
+    padding-right: 50%; }
+  .breadcrumbs__item:nth-child(n+2) {
+    display: none; }
+  .breadcrumbs__item svg:first-child {
+    display: none; }
+  .breadcrumbs__item svg:nth-child(2) {
+    margin-top: 3px;
+    width: 12px;
+    height: 12px;
+    display: block; } }
 
 /*========/adaptive======*/
 /*Reset
@@ -1990,7 +1995,7 @@ body.hidden {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 450px;
     flex: 0 0 450px;
-    padding: 2px 30px 2px 0;
+    padding: 2px 30px 0 2px;
     margin: -2px 0;
     display: -webkit-box;
     display: -ms-flexbox;
