--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -349,7 +349,7 @@ body {
 	}
 	&__info {
 		flex: 0 0 450px;
-		padding: 2px 30px 2px 0;
+		padding: 2px 30px 0 2px;
 		margin: -2px 0;
 		display: flex;
 		flex-direction: column;
