--- a/assets/css/pages.scss
+++ b/assets/css/pages.scss
@@ -4,6 +4,27 @@
 			box-shadow: 0px 20px 50px rgba(55, 32, 14, 0.1);
 		}
 	}
+	&_gray-foot {
+		.footer {
+			&__nav {
+				background-color: $gray;
+				&:before {
+					background-color: $gray;
+				}
+			}
+			&__info {
+				background-color: $wh;
+				&:before {
+					background-color: $wh;
+				}
+			}
+		}
+		.arrow-top {
+			&:hover {
+				background-color: $wh;
+			}
+		}
+	}
 }
 
 /*========Breadcrumbs=======*/
@@ -11,8 +32,35 @@
 	margin: 24px 0 30px;
 	display: flex;
 	align-items: center;
+	&__btn {
+		svg {
+			width: 16px;
+			height: 16px;
+			fill: $lbrown;
+			margin-right: 20px;
+			transition: all .2s linear;
+			&:nth-child(2) {
+				display: none;
+			}
+		}
+		&:hover {
+			svg {
+				fill: $red;
+			}
+		}
+		&-back {
+			display: none;
+			svg {
+				width: 12px;
+				height: 12px;
+			}
+		}
+	}
+	&__links {
+		display: flex;
+	}
 	&__item {
-		display: inline-flex;
+		display: inline-block;
 		align-items: flex-start;
 		margin-left: 48px;
 		position: relative;
@@ -34,16 +82,6 @@
 			top: 50%;
 			left: -23.5px;
 			z-index: 1;
-		}
-		svg {
-			width: 16px;
-			height: 16px;
-			fill: $lbrown;
-			margin-right: 20px;
-			transition: all .2s linear;
-			&:nth-child(2) {
-				display: none;
-			}
 		}
 		span {
 			font-family: $ff;
@@ -540,9 +578,42 @@
 }
 /*========/testimonial========*/
 
+/*=======Services=======*/
+.services {
+	margin-bottom: 100px;
+	&__inner {
+		margin-top: 50px;
+		display: flex;
+		flex-wrap: wrap;
+		margin-left: -30px;
+		margin-bottom: -30px;
+		>* {
+			width: calc(33.33333% - 30px);
+			margin-left: 30px;
+			margin-bottom: 30px;
+		}
+	}
+	.info-box {
+		background-color: $gray;
+	}
+}
+/*=======/services=======*/
+
 
 /*========Adaptive======*/
 @media(max-width: 1200px) {
+	.page {
+		&_gray-foot {
+			.footer {
+				&__info {
+					background-color: $gray;
+					&:before {
+						background-color: $gray;
+					}
+				}
+			}
+		}
+	}
 	.sertificats {
 		padding: 70px  0 80px;
 		.slick-slide {
@@ -634,6 +705,18 @@
 	.advantages {
 		&__inner {
 			margin-top: 30px;
+		}
+	}
+	.services {
+		margin-bottom: 80px;
+		&__inner {
+			margin-left: -12px;
+			margin-bottom: -12px;
+			>* {
+				width: calc(50% - 12px);
+				margin-left: 12px;
+				margin-bottom: 12px;
+			}
 		}
 	}
 }
@@ -773,6 +856,19 @@
 		}
 	}
 }
+@media(max-width: 540px) {
+	.services {
+		margin-bottom: 50px;
+		&__inner {
+			margin-top: 30px;
+			margin-left: 0;
+			>* {
+				width: 100%;
+				margin-left: 0;
+			}
+		}
+	}
+}
 @media(max-width: 376px) {
 	.reviews {
 		.slick-list {
@@ -781,19 +877,20 @@
 	}
 	.breadcrumbs {
 		&__item {
-			&:nth-child(n+2) {
-				display: none;
-			}
-			svg {
-				&:first-child {
+			display: none;
+			&_back {
+				display: inline-block;
+				&:before {
 					display: none;
 				}
-				&:nth-child(2) {
-					margin-top: 3px;
-					width: 12px;
-					height: 12px;
-					display: block;
-				}
+			}
+		}
+		&__btn {
+			&-home {
+				display: none;
+			}
+			&-back {
+				display: inline-block;
 			}
 		}
 	}
