--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -514,6 +514,7 @@ body {
 /*========Info-box========*/
 .info-box {
 	background-color: $wh;
+	height: 100%;
 	&__photo {
 		display: block;
 		height: 180px;
