--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -2,6 +2,7 @@ $ff: 'Roboto', sans-serif;
 $bl: #2B323C;
 $wh: #fff;
 $lbrown: #BF9D77;
+$op-brown: rgba(191, 157, 119, .3);
 $green: #27AE60;
 $red: #983031;
 $gray: #F9F9F9;
