--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1289,7 +1289,12 @@
 .list-dots li {
   position: relative;
   padding-left: 30px;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #2B323C;
+  line-height: 1.5; }
   .list-dots li:last-child {
     margin-bottom: 0; }
   .list-dots li:before {
@@ -1323,6 +1328,94 @@
     color: #983031; }
 
 /*=======/text-more======*/
+/*=========List-block=====*/
+.list-block {
+  margin-top: 100px; }
+  .list-block .description {
+    margin-top: 50px; }
+  .list-block__inner {
+    margin-top: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-bottom: -30px; }
+  .list-block__box {
+    margin-left: 30px;
+    margin-bottom: 30px; }
+    .list-block__box_half {
+      width: calc(50% - 30px); }
+    .list-block__box_full {
+      margin-top: 20px;
+      width: 100%; }
+
+/*=========list-block=====*/
+/*=====List-box=========*/
+.list-box {
+  background-color: #fff;
+  padding: 30px; }
+  .list-box__title {
+    font-family: "Roboto", sans-serif;
+    font-size: 24px;
+    font-weight: 900;
+    line-height: 1.5;
+    color: #2B323C;
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgba(191, 157, 119, 0.3);
+    margin-bottom: 30px; }
+  .list-box__subtitle {
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.5;
+    color: #2B323C;
+    margin-bottom: 20px; }
+    .list-box__subtitle_one {
+      -webkit-box-flex: 1;
+      -ms-flex: 1 1 100%;
+      flex: 1 1 100%; }
+  .list-box__row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-left: -50px;
+    padding-bottom: 30px;
+    position: relative;
+    margin-bottom: 30px; }
+    .list-box__row:after {
+      content: "";
+      width: calc(100% - 50px);
+      height: 1px;
+      background-color: rgba(191, 157, 119, 0.3);
+      position: absolute;
+      left: 50px;
+      bottom: 0;
+      z-index: 1; }
+    .list-box__row > * {
+      margin-left: 50px;
+      width: calc(33.33333% - 50px); }
+  .list-box__warning {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start; }
+    .list-box__warning img {
+      margin-top: 3px; }
+    .list-box__warning span {
+      margin-left: 13px;
+      font-family: "Roboto", sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      color: #983031;
+      line-height: 1.5; }
+
+/*=====/list-box=========*/
 /*======Sertificats======*/
 .sertificats {
   padding: 90px 0 100px; }
@@ -1522,12 +1615,266 @@
     background-color: #F9F9F9; }
 
 /*=======/services=======*/
+/*=======Services-box======*/
+.services-box {
+  margin-bottom: 100px; }
+  .services-box__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .services-box__info {
+    width: 56%;
+    margin-right: 50px; }
+  .services-box .title {
+    max-width: 480px; }
+  .services-box .description {
+    max-width: 550px; }
+  .services-box__nav {
+    width: calc(44% - 50px); }
+
+/*=======/services-box======*/
+/*======Box-nav=====*/
+.box-nav {
+  border: 4px solid #BF9D77;
+  padding: 40px 50px; }
+  .box-nav__title {
+    font-family: "Roboto", sans-serif;
+    font-size: 24px;
+    font-weight: 900;
+    color: #2B323C;
+    line-height: 1.5;
+    margin-bottom: 20px; }
+  .box-nav__item {
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #2B323C;
+    line-height: 1.5;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ECE2D6;
+    margin-bottom: 10px;
+    position: relative; }
+    .box-nav__item:last-child {
+      margin-bottom: 0;
+      border-bottom: none;
+      padding-bottom: 0; }
+    .box-nav__item a {
+      color: #2B323C;
+      -webkit-transition: all .2s linear;
+      -o-transition: all .2s linear;
+      transition: all .2s linear; }
+      .box-nav__item a:hover {
+        color: #BF9D77; }
+    .box-nav__item.active a {
+      color: #983031; }
+    .box-nav__item.active:before {
+      content: "";
+      width: 15px;
+      height: 30px;
+      background: url("../images/icons/arrow-strong.svg") center no-repeat;
+      position: absolute;
+      left: -54px;
+      z-index: 1;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%); }
+  .box-nav__mobile {
+    margin-bottom: 80px;
+    display: none; }
+
+/*======/box-nav=====*/
+/*=======Contact-block======*/
+.contact-block__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-bottom: -30px; }
+  .contact-block__inner.one .contact-block__box {
+    width: 100%; }
+  .contact-block__inner.one .contact-block__info {
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap; }
+  .contact-block__inner.two .contact-block__box {
+    width: calc(50% - 30px); }
+  .contact-block__inner.two .contact-block__item {
+    width: 100%;
+    margin-right: 0; }
+  .contact-block__inner.three .contact-block__box {
+    width: calc(33.33333% - 30px); }
+  .contact-block__inner.three .contact-block__item {
+    width: 100%;
+    margin-right: 0; }
+
+.contact-block__box {
+  border: 4px solid rgba(191, 157, 119, 0.3);
+  padding: 30px;
+  margin-left: 30px;
+  margin-bottom: 30px;
+  width: 100%; }
+
+.contact-block__title {
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  color: #2B323C;
+  line-height: 1.5;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgba(191, 157, 119, 0.3);
+  margin-bottom: 20px; }
+
+.contact-block__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-bottom: -10px; }
+
+.contact-block__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  margin-bottom: 10px;
+  margin-right: 110px; }
+  .contact-block__item:last-child {
+    margin-right: 0; }
+  .contact-block__item img {
+    margin-top: 3px; }
+
+.contact-block__data {
+  margin-left: 16px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #2B323C;
+  line-height: 1.5;
+  -webkit-transition: all .2s linear;
+  -o-transition: all .2s linear;
+  transition: all .2s linear; }
+  .contact-block__data_bold {
+    font-weight: 700; }
+  .contact-block__data_nowrap {
+    white-space: nowrap; }
+
+.contact-block a:hover .contact-block__data {
+  color: #BF9D77; }
+
+/*=======/contact-block======*/
+/*========Photo-slider======*/
+.photo-slider {
+  padding: 100px 0; }
+  .photo-slider .container {
+    position: relative; }
+  .photo-slider .progress {
+    display: none; }
+  .photo-slider__slider {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .photo-slider__slide img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover; }
+  .photo-slider .slick-list {
+    margin-right: -31px; }
+  .photo-slider .slick-slide {
+    margin-right: 30px; }
+  .photo-slider__nav {
+    margin-top: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .photo-slider__arrow {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    z-index: 1; }
+    .photo-slider__arrow svg {
+      width: 60px;
+      height: 60px;
+      fill: #BF9D77;
+      -webkit-transition: all .2s linear;
+      -o-transition: all .2s linear;
+      transition: all .2s linear;
+      opacity: 0.3; }
+    .photo-slider__arrow_prev {
+      left: -95px; }
+    .photo-slider__arrow_next {
+      right: -95px; }
+      .photo-slider__arrow_next svg {
+        -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+        transform: rotate(180deg); }
+    .photo-slider__arrow:hover svg {
+      opacity: 1; }
+
+.progress {
+  display: block;
+  width: 100%;
+  height: 1px;
+  overflow: hidden;
+  background-color: rgba(191, 157, 119, 0.3);
+  background-image: -webkit-gradient(linear, left top, right top, from(#BF9D77), to(#BF9D77));
+  background-image: -webkit-linear-gradient(left, #BF9D77, #BF9D77);
+  background-image: -o-linear-gradient(left, #BF9D77, #BF9D77);
+  background-image: linear-gradient(to right, #BF9D77, #BF9D77);
+  background-repeat: no-repeat;
+  background-size: 0 100%;
+  margin: 0 10px;
+  -webkit-transition: background-size .4s ease-in-out;
+  -o-transition: background-size .4s ease-in-out;
+  transition: background-size .4s ease-in-out; }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0; }
+
+/*========/photo-slider======*/
 /*========Adaptive======*/
+@media (max-width: 1440px) {
+  .photo-slider {
+    padding: 80px 0 70px; }
+    .photo-slider .progress {
+      display: block; }
+    .photo-slider__arrow {
+      position: static;
+      -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+      transform: translateY(0); }
+      .photo-slider__arrow svg {
+        width: 24px;
+        height: 24px;
+        opacity: 1; }
+      .photo-slider__arrow:hover svg {
+        opacity: 0.3; } }
+
 @media (max-width: 1200px) {
   .page_gray-foot .footer__info {
     background-color: #F9F9F9; }
     .page_gray-foot .footer__info:before {
       background-color: #F9F9F9; }
+  .contact-block__item {
+    margin-right: 50px; }
   .sertificats {
     padding: 70px  0 80px; }
     .sertificats .slick-slide {
@@ -1567,6 +1914,40 @@
     font-size: 30px; } }
 
 @media (max-width: 860px) {
+  .page_service-labor .services-box__nav {
+    display: none; }
+  .photo-slider .slick-list {
+    margin-right: -12px; }
+  .photo-slider .slick-slide {
+    margin-right: 12px; }
+  .box-nav__mobile {
+    display: block; }
+  .services-box {
+    margin-bottom: 70px; }
+    .services-box .title {
+      max-width: 650px; }
+    .services-box_inner {
+      display: block; }
+    .services-box__info {
+      width: 100%;
+      margin-right: 0; }
+  .list-block {
+    margin-top: 80px; }
+    .list-block__inner {
+      margin-left: -12px;
+      margin-bottom: -12px; }
+    .list-block__box {
+      margin-left: 12px;
+      margin-bottom: 12px; }
+      .list-block__box_half {
+        width: calc(50% - 12px); }
+      .list-block__box_full {
+        margin-top: 0; }
+  .list-box__row > * {
+    width: calc(50% - 50px);
+    margin-bottom: 30px; }
+    .list-box__row > *:last-child {
+      margin-bottom: 0; }
   .about {
     padding-bottom: 80px; }
     .about__inner {
@@ -1614,6 +1995,28 @@
     margin-right: -40px; } }
 
 @media (max-width: 765px) {
+  .photo-slider {
+    padding: 50px 0 40px; }
+  .services-box {
+    margin-bottom: 40px; }
+  .contact-block__inner.one .contact-block__info {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+  .contact-block__inner.one .contact-block__item {
+    width: 100%;
+    margin-right: 0; }
+  .list-block {
+    margin-top: 50px; }
+    .list-block .description {
+      margin-top: 30px; }
+    .list-block__inner {
+      margin-top: 30px; }
+    .list-block__box {
+      width: calc(100% - 12px); }
+  .list-box__title {
+    font-size: 16px; }
+  .list-box__row > * {
+    width: 100%; }
   .text-more {
     display: none; }
     .text-more__btn {
@@ -1703,6 +2106,8 @@
     width: 100%; } }
 
 @media (max-width: 540px) {
+  .box-nav__mobile {
+    margin-bottom: 50px; }
   .services {
     margin-bottom: 50px; }
     .services__inner {
@@ -1710,7 +2115,13 @@
       margin-left: 0; }
       .services__inner > * {
         width: 100%;
-        margin-left: 0; } }
+        margin-left: 0; }
+  .box-nav {
+    padding: 30px; }
+    .box-nav__title {
+      font-size: 16px; }
+    .box-nav__item.active:before {
+      left: -35px; } }
 
 @media (max-width: 376px) {
   .reviews .slick-list {
